--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "pg": "^8.16.3",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
-    "streamifier": "^0.1.1"
+    "streamifier": "^0.1.1",
+    "vite": "^6.4.1"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
@@ -29,6 +30,6 @@
     "postcss": "^8.5.6",
     "tailwindcss": "^3.4.17",
     "typescript": "~5.8.2",
-    "vite": "^6.2.0"
+    "vite": "^6.4.1"
   }
 }
